--- a/Assets/Resources/UI/Screens/HistoryScreenUI.uxml
+++ b/Assets/Resources/UI/Screens/HistoryScreenUI.uxml
@@ -1,23 +1,14 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement name="Screen" style="flex-grow: 1;">
-        <ui:VisualElement name="TopBound" style="flex-grow: 1; width: 100%; height: 5%;" />
-        <ui:VisualElement name="FloatBody" style="flex-grow: 1; height: 90%; width: 100%;">
-            <ui:VisualElement name="TitleHolder" style="flex-grow: 1; height: 15%;">
-                <ui:Label tabindex="-1" text="Eterra Rewards" parse-escape-sequences="true" display-tooltip-when-elided="true" name="LblTitle" style="-unity-font-style: bold; font-size: 20px; -unity-text-align: upper-center;" />
+    <ui:VisualElement name="Screen" style="flex-grow: 1; flex-direction: column;">
+        <ui:VisualElement name="TopBound" style="height: 5%; width: 100%;" />
+        <ui:VisualElement name="FloatBody" style="flex-grow: 1; height: 90%; width: 100%; flex-direction: column;">
+            <ui:VisualElement name="TitleHolder" style="height: 12%; justify-content: center; align-items: center; padding-top: 18px; padding-bottom: 12px;">
+                <ui:Label name="LblTitle" text="Eterra Reward History" style="-unity-font-style: bold; font-size: 36px; -unity-text-align: middle-center;" />
             </ui:VisualElement>
-            <ui:VisualElement name="SlotMachineHolder" style="flex-grow: 1; height: 85%; flex-direction: row;">
-                <ui:VisualElement name="SlotHolder" style="flex-grow: 1; flex-direction: row; height: 100%; width: 85%;">
-                    <ui:VisualElement name="Slot1" style="flex-grow: 1; border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0;" />
-                    <ui:VisualElement name="Slot2" style="flex-grow: 1;" />
-                    <ui:VisualElement name="Slot3" style="flex-grow: 1;" />
-                </ui:VisualElement>
-                <ui:VisualElement name="SlotArmHolder" style="flex-grow: 1; width: 16%;" />
-            </ui:VisualElement>
-            <ui:VisualElement name="InformationPanel" style="flex-grow: 1; height: 50%;">
-                <ui:VisualElement name="InstantWinDisplau" style="flex-grow: 1; height: 50%;" />
-                <ui:VisualElement name="RewardHistory" style="flex-grow: 1; height: 59px;" />
-            </ui:VisualElement>
+            <ui:ScrollView name="HistoryScroll" style="flex-grow: 1; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
+                <ui:VisualElement name="RewardHistory" style="height: 2%; min-height: 0; padding: 2px;" />
+            </ui:ScrollView>
         </ui:VisualElement>
-        <ui:VisualElement name="BottomBound" style="flex-grow: 1; width: 100%; height: 5%;" />
+        <ui:VisualElement name="BottomBound" style="height: 5%; width: 100%;" />
     </ui:VisualElement>
 </ui:UXML>
