--- a/Assets/Resources/UI/Screens/PlayScreenUI.uxml
+++ b/Assets/Resources/UI/Screens/PlayScreenUI.uxml
@@ -1,44 +1,33 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
-  <ui:VisualElement name="Screen" style="flex-grow: 1;">
-    <ui:VisualElement name="TopBound" style="flex-grow: 1; width: 100%; height: 5%;" />
-    <ui:VisualElement name="FloatBody" style="flex-grow: 1; height: 90%; width: 100%; flex-direction: column;">
-      
-      <ui:VisualElement name="TitleHolder" style="flex-grow: 1; height: 15%;">
-        <ui:Label name="LblTitle" text="Eterra Rewards" style="-unity-font-style: bold; font-size: 32px; -unity-text-align: upper-center;" />
-      </ui:VisualElement>
-
-      <ui:VisualElement name="SlotMachineHolder" style="flex-grow: 1; height: 70%; flex-direction: row;">
-        
-        <ui:VisualElement name="SlotHolder" style="flex-grow: 1; flex-direction: row; height: 100%; width: 85%;">
-          <ui:VisualElement name="Slot1" style="flex-grow: 1; justify-content: center; align-items: center;">
-            <ui:Label name="LblSlot1" text="?" style="font-size: 48px; -unity-text-align: middle-center;" />
-          </ui:VisualElement>
-          <ui:VisualElement name="Slot2" style="flex-grow: 1; justify-content: center; align-items: center;">
-            <ui:Label name="LblSlot2" text="?" style="font-size: 48px; -unity-text-align: middle-center;" />
-          </ui:VisualElement>
-          <ui:VisualElement name="Slot3" style="flex-grow: 1; justify-content: center; align-items: center;">
-            <ui:Label name="LblSlot3" text="?" style="font-size: 48px; -unity-text-align: middle-center;" />
-          </ui:VisualElement>
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
+    <ui:VisualElement name="Screen" style="flex-grow: 1;">
+        <ui:VisualElement name="TopBound" style="flex-grow: 1; width: 100%; height: 5%;" />
+        <ui:VisualElement name="FloatBody" style="flex-grow: 1; height: 90%; width: 100%; flex-direction: column;">
+            <ui:VisualElement name="TitleHolder" style="flex-grow: 1; height: 15%;">
+                <ui:Label name="LblTitle" text="Eterra Rewards" style="-unity-font-style: bold; font-size: 60%; -unity-text-align: upper-center;" />
+            </ui:VisualElement>
+            <ui:VisualElement name="SlotMachineHolder" style="flex-grow: 1; height: 70%; flex-direction: row;">
+                <ui:VisualElement name="SlotHolder" style="flex-grow: 1; flex-direction: row; height: 100%; width: 85%;">
+                    <ui:VisualElement name="Slot1" style="flex-grow: 1; justify-content: center; align-items: center;">
+                        <ui:Label name="LblSlot1" text="?" style="font-size: 90%; -unity-text-align: middle-center;" />
+                    </ui:VisualElement>
+                    <ui:VisualElement name="Slot2" style="flex-grow: 1; justify-content: center; align-items: center;">
+                        <ui:Label name="LblSlot2" text="?" style="font-size: 90%; -unity-text-align: middle-center;" />
+                    </ui:VisualElement>
+                    <ui:VisualElement name="Slot3" style="flex-grow: 1; justify-content: center; align-items: center;">
+                        <ui:Label name="LblSlot3" text="?" style="font-size: 90%; -unity-text-align: middle-center;" />
+                    </ui:VisualElement>
+                </ui:VisualElement>
+                <ui:VisualElement name="SlotArmHolder" style="flex-grow: 1; width: 16%; justify-content: center; align-items: center;">
+                    <ui:Button name="BtnSpin" text="Spin!" style="width: 80%; height: 80px; font-size: 50%;" />
+                </ui:VisualElement>
+            </ui:VisualElement>
+            <ui:VisualElement name="InformationPanel" style="flex-grow: 1; height: 15%; flex-direction: column;">
+                <ui:Label name="LblStatus" text="Waiting..." style="font-size: 70%; -unity-text-align: middle-center;" />
+                <ui:VisualElement name="InstantWinDisplay" style="display: none; flex-grow: 1; justify-content: center; align-items: center;">
+                    <ui:Label name="LblWinMessage" text="🎉 You Win! 🎉" style="font-size: 32px; color: green; -unity-text-align: middle-center;" />
+                </ui:VisualElement>
+            </ui:VisualElement>
         </ui:VisualElement>
-
-        <ui:VisualElement name="SlotArmHolder" style="flex-grow: 1; width: 16%; justify-content: center; align-items: center;">
-          <ui:Button name="BtnSpin" text="Spin!" style="width: 80%; height: 60px;" />
-        </ui:VisualElement>
-
-      </ui:VisualElement>
-
-      <ui:VisualElement name="InformationPanel" style="flex-grow: 1; height: 15%; flex-direction: column;">
-        <ui:Label name="LblStatus" text="Waiting..." style="font-size: 24px; -unity-text-align: middle-center;" />
-        
-        <!-- New Element: Initially hidden -->
-        <ui:VisualElement name="InstantWinDisplay" style="display: none; flex-grow: 1; justify-content: center; align-items: center;">
-          <ui:Label name="LblWinMessage" text="🎉 You Win! 🎉" style="font-size: 32px; color: green; -unity-text-align: middle-center;" />
-        </ui:VisualElement>
-
-        <ui:VisualElement name="RewardHistory" style="flex-grow: 1; height: 59px;" />
-      </ui:VisualElement>
-
+        <ui:VisualElement name="BottomBound" style="flex-grow: 1; width: 100%; height: 5%;" />
     </ui:VisualElement>
-    <ui:VisualElement name="BottomBound" style="flex-grow: 1; width: 100%; height: 5%;" />
-  </ui:VisualElement>
 </ui:UXML>
